Add xml comments. Brush up code

--- a/AnyPointDemo/packages.config
+++ b/AnyPointDemo/packages.config
@@ -1,29 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package poiId="AutoMapper" version="6.0.2" targetFramework="net452" />
-  <package poiId="CommonServiceLocator" version="1.3" targetFramework="net452" />
-  <package poiId="Edge.js" version="4.0.0" targetFramework="net452" />
-  <package poiId="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package poiId="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net452" />
-  <package poiId="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net452" />
-  <package poiId="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
-  <package poiId="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
-  <package poiId="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
-  <package poiId="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
-  <package poiId="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net452" />
-  <package poiId="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
-  <package poiId="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
-  <package poiId="Microsoft.CodeDom.ProvpoiIders.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
-  <package poiId="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
-  <package poiId="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
-  <package poiId="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
-  <package poiId="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net452" />
-  <package poiId="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package poiId="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
-  <package poiId="Owin" version="1.0" targetFramework="net452" />
-  <package poiId="RAML.Api.Core" version="0.9.10" targetFramework="net452" />
-  <package poiId="Raml.Parser" version="1.0.4.0" targetFramework="net452" />
-  <package poiId="RAML.WebApiExplorer" version="1.2.2.0" targetFramework="net452" />
-  <package poiId="System.ComponentModel.Annotations" version="4.0.0" targetFramework="net452" />
-  <package poiId="Unity" version="4.0.1" targetFramework="net452" />
+  <package id="AutoMapper" version="6.0.2" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="Edge.js" version="4.0.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net452" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="RAML.Api.Core" version="0.9.10" targetFramework="net452" />
+  <package id="Raml.Parser" version="1.0.4.0" targetFramework="net452" />
+  <package id="RAML.WebApiExplorer" version="1.2.2.0" targetFramework="net452" />
+  <package id="System.ComponentModel.Annotations" version="4.0.0" targetFramework="net452" />
+  <package id="Unity" version="4.0.1" targetFramework="net452" />
 </packages>
